# INFLUX

./: .Renviron  .gitignore  _quarto.yml  _toc.yml  app.R  index.ipynb  index.qmd  index.tex  myst.html  myst.yml  package-lock.json  package.json  pyproject.toml  references.bib  theme-light.scss
_freeze/index/execute-results/: html.json
_manuscript/: index.docx  index.html  index.xml
_manuscript/notebooks/: WHO-DON API-preview.html  WHO-DON API.out.ipynb
data/: 3. Clustering Drivers.xlsx  BioBERT.ipynb  cosine_test_31 Oct.csv  drivers_list.rds  eppo_documents.csv  eppo_documents_filtered.csv  example_list.rds  prompt_human_animal.txt  result_df_19 Nov.csv  result_df_31 Oct.csv
data/eppo_downloads/: LIBEAF.docx  PSDMAC.docx
data/exportsql/: authorities.sql  countries.sql  datatypes.sql  langs.sql  sqlschema.sql
docs/: index.docx  index.html
docs/notebooks/: GemCausal-preview.html  GemCausal.ipynb  GemCausal.out.ipynb  WHO-DON API.embed.ipynb  WHO-DON API.out.ipynb  WHO-DON-preview.html  WHO-DON.out.ipynb  WHO-DON.qmd  causal-chains-preview.html  causal-chains.ipynb  causal-chains.out.ipynb  causalizeR-preview.html  causalizeR.embed.ipynb  causalizeR.out.ipynb  causalizeR.qmd
notebooks/: BioBERT.ipynb  GemCausal.ipynb  WHO-DON API.qmd  WHO-DON.embed.ipynb  WHO-DON.qmd  api_responses.md  api_responses.txt  cabi_webscraping.ipynb  cabi_webscraping.py  causal-chains.ipynb  causalizeR.qmd  eppo-sql.ipynb  gemini.ipynb  literature-review.py  network.R
notebooks/results/: gpt-3.5-turbo-results.csv
paper/: manuscript.Rmd
scripts/: 1 data_retrieved_API.R
(+348 files in other folders)
